# furumusic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build-and-publish.yml
federation/: identity.key  state.sqlite3
prompts/: normalize.txt  normalize_batch.txt
src/: auth.rs  config.rs  lastfm.rs  main.rs  media_paths.rs  metrics.rs  oidc.rs  torrents.rs  user.rs
src/admin/: mod.rs  v2.rs  views.rs
src/agent/: cover_art.rs  cover_variants.rs  dto.rs  metadata.rs  mod.rs  mover.rs  normalize.rs  path_hints.rs  rag.rs
src/api/: mod.rs
src/federation/: devices.rs  mod.rs  serve.rs  storage.rs
src/i18n/: mod.rs  phrases.rs
src/jobs/: archive_cleanup.rs  artist_image_backfill.rs  artist_track_image_backfill.rs  artwork_backfill.rs  cover_backfill.rs  cover_variant_backfill.rs  inbox_discover.rs  inbox_process.rs  lastfm_popularity.rs  lastfm_scrobble.rs  metadata_backfill.rs  mod.rs  musicbrainz.rs
src/music/: mod.rs
src/player/: dto.rs  helpers.rs  mod.rs  queries.rs  rows.rs
src/scheduler/: mod.rs
templates/: base.html  login.html  player.html
templates/admin/: artist_form.html  artists.html  debug.html  index.html  job_detail.html  job_run_detail.html  jobs.html  layout.html  media_files.html  probe_fragment.html  release_form.html  releases.html  review_detail.html  reviews.html  settings.html  setup.html  user_form.html  users.html  v2.html
templates/player/: modals.html  scripts.html  shell.html  styles.html
